<resources>
    <string name="app_name">NSUCPC</string>
    <string name="todo">TODO</string>
    <string name="textlogounder">Career and Placement Center of North South University</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="NsuCpc">NSU CPC</string>
    <string name="welRig">Create Your Account</string>
    <string name="cpcmember">CPC Member Sign Up</string>
    <string name="Studentmember">Student Sign Up</string>
    <string name="name1">Name</string>
    <string name="passward">Passward</string>
    <string name="email">Enter your NSU mail Id</string>
    <string name="StudentId">Enter you 7th digit of student Id</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="termagree"> I agree to NSU CPC’s Terms and Conditions</string>
    <string name="name">Name</string>
    <string name="buttonstudentRig">Button</string>
    <string name="todoo">TODO</string>
    <string name="signupbtntext">Sign Up</string>
    <string name="msgSignIn">Are you ALREADY registered?Log In</string>
    <string name="stlogintext">Student Login</string>
    <string name="stloginbtn">Log in</string>
    <string name="stforgotpasstext">Forgot Passward?</string>
    <string name="msgSignUp">Are you not registered?Sign Up</string>
    <string name="todo14">TODO</string>
    <string name="cpcmemberlogin">CPC Member Log in</string>
    <string name="resetpassward">Reset Passward</string>
    <string name="school_string">School</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="nsu_mail_id">Nsu mail Id</string>
    <string name="student_id">Student id</string>
    <string name="student_idnew">7 digit of student Id</string>
    <string name="nidtextView">National Id</string>
    <string-array name="School_of_nsu">
        <item>School of Business &amp; Economics</item>
        <item>School of Engineering &amp; Physical Sciences</item>
        <item>School of Humanities &amp; Social Sciences</item>
        <item>School of Health &amp; Life Sciences</item>
    </string-array>

    <string-array name="Department_of_nsu">
        <item>Department of Electrical Engineering &amp; Computer Science</item>
        <item>Department of Architecture</item>
        <item>Department of Environmental Science and Management</item>
        <item>School of Health &amp; Life Sciences</item>
        <item>Bachelor of Business Administration</item>
        <item>Master of Business Administration</item>
        <item>Department of Economics</item>
        <item>Department of General and Continue Education</item>
        <item>Department of English</item>
        <item>Department of Biochemistry and Microbiology</item>
        <item>Department of Public Health</item>
        <item>Department of Pharmacy</item>

    </string-array>
    <string name="Department_Name_String">Department Name</string>
    <string name="Present_address_string">Present address</string>

    <string name="Present_address_hint">Country,District,Post Office,PoliceStation,Postal Code,House/Village/City,Road/Block/Sector</string>
    <string name="Permanent_address_string">Permanent address</string>
    <string name="Birth_Date_string">Date of Birth</string>
    <string name="Birth_Date_hint">Date/Month/Year</string>
    <string name="button_save_text">Save</string>

    <string name="jobtitlestring">Job Title</string>
    <string name="jobjobtitlestringTwo">Enter Job Title</string>
    <string name="salarystring">Salary</string>
    <string name="salarystringtwo"> Amount BDT </string>
    <string name="joblocationstring">Job Description</string>
    <string name="WorkExpriencestring">Work Experience</string>
    <string name="Skillstring">Skills</string>
    <string name="uploadPdfstring">Upload a documents</string>
    <string name="companynamestring">Company Name</string>
    <string name="postjobstring">Post Job</string>
    <string name="companynameString">Company Name</string>
    <string name="pdfshowstringbtn">Documents</string>
    <string name="takasign">৳</string>
    <string name="datacardstring">25 May 2021</string>
    <string name="details">Details</string>
    <string name="documents">Documents</string>
    <string name="seepdfFile">Download/View PDF file</string>
    <string name="apply">Apply</string>
    <string name="emailuser">Email</string>
    <string name="updatebtn">Update</string>
    <string name="homepage">Student Portal</string>

</resources>